# mastering_taproot_book_learning

./: README.md  pyproject.toml
src/: building_segwit_txs.py  legacy_to_segwit.py  multisig_p2sh.py  private_keys.py  relative_timelock.py
