[project]
name = "mastering-taproot"
version = "0.1.0"
description = ""
package-mode = false
authors = [
    {name = "Artemiy",email = "artem.pospelov2018@yandex.ru"}
]
requires-python = ">=3.13"
dependencies = [
    "bitcoinlib (>=0.7.7,<0.8.0)",
    "fastecdsa (>=3.0.1,<4.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
