[tool.poetry]
name = "mastering-taproot"
version = "0.1.0"
description = ""
authors = ["Artemiy <artem.pospelov2018@yandex.ru>"]
package-mode = false

[tool.poetry.dependencies]
python = ">=3.12,<4"
bitcoinlib = ">=0.7.7,<0.8.0"
fastecdsa = ">=3.0.1,<4.0.0"
bitcoin-utils = "^0.7.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
